Fixed product description/review link alignments on product detail pages.

--- a/week 6 finished/css/main.css
+++ b/week 6 finished/css/main.css
@@ -540,9 +540,9 @@ p {
 }
 .subsection-box{
 	display:block;
-    padding-left:0.5em;
+    /*padding-left:0.5em;*/
     padding-right:0.5em;
-    margin-left: 0.5em;
+/*    margin-left: 0.5em;*/
     margin-right: 0.5em;
 }
 
